--- a/hwhc-methodology.Rmd
+++ b/hwhc-methodology.Rmd
@@ -17,12 +17,6 @@ output:
       collapsed: no
 ---
   
-  <script>
-    $(document).ready(function() {
-      $('#header').prepend('<img src=`r knitr::image_uri("www/bsa_logo.svg")` alt=\"NHSBSA logo\" style=\"position:relative; float: right; top: 0; right: 0; padding: 10px; width: 25%;\">');
-  });
-</script>
-  
   <style type="text/css">
   
   body, td {
@@ -85,9 +79,8 @@ These statistics provide estimates of volumes related to these certificate schem
 This publication can have a wide range of uses, including:
 
 * informing government or local NHS policy
-* allowing public scrutiny of national and regional prescribing habits
-* responding to queries made under the Freedom of Information (FOI) act
-* supporting resolution of ad-hoc enquiries
+* monitoring the uptake of NHS Help with Health Costs schemes
+* allowing scrutiny by the public and stakeholders
 
 The NHS Business Services Authority (NHSBSA) administer services providing help with health costs. The data that forms the basis of these statistics is collected as a by-product of this process.
 
@@ -102,9 +95,7 @@ Some certificates may also provide support for partners and dependent children. 
 
 It may not be possible to calculate an age if the applicant's date of birth was not supplied or was incorrect. If the captured date of birth looks incorrect, the age will classified as "Not Available". Age restrictions will differ between services, as defined in the relevant "methodology" sections.
 
-Due to the method used to calculate age using the applicants date of birth, some data may change between releases. Historic age data may change:
-
-* if a person updates their data to correct inaccuracies with their date of birth
+Due to the method used to calculate age using the applicants date of birth, some data may change between releases. Historic age data may change if a person updates their data to correct inaccuracies with their date of birth.
 
 #### 2.1.2  Location (Country/Integrated Care Board)
 
@@ -124,7 +115,7 @@ Due to the method used to assign location, some data may change between releases
 #### 2.1.3  Deprivation
 Deprivation reporting uses the [English Indices of Deprivation 2019](https://www.gov.uk/government/statistics/english-indices-of-deprivation-2019). In particular, the headline Index of Multiple Deprivation (IMD). IMD data combines with the [National Statistics Postcode Lookup (NSPL) - May 2024](https://geoportal.statistics.gov.uk/datasets/521edce4159a451a932539b7fc786322/about) using lower-layer super output area (LSOA) 2011. This identifies the general deprivation for an applicant's postcode.
 
-As deprivation is based on indices calculated for England only, reporting is limiting to applicants that can be identified with an English postcode.
+As deprivation is based on indices calculated for England only, reporting is limited to applicants that can be identified with an English postcode.
 
 The measure of deprivation reported in these statistics is the IMD quintile. Each quintile represents 20% of the population, based on groups of LSOA. If an applicant's postcode does not map to the NSPL the data will be reported as 'unknown' IMD quintile.
 
@@ -147,7 +138,7 @@ For the NHS Low Income Scheme and NHS tax credit exemption certificates, a singl
 #### 2.2.2 Issued certificate counts
 Where a count of issued certificates has been provided this will only include cases where the application has been completed and a certificate issued to the applicant.
 
-These counts are based solely on certificates issued by NHS BSA. There is no ability to identify if the certificate was received and then used by the applicant.
+These counts are based solely on certificates issued by NHSBSA. There is no ability to identify if the certificate was received and then used by the applicant.
 
 Some certificates may be reissued if the certificate holder changes there personal information or requests a replacement due to damage or loss of a certificate. These additional (reissued) certificates will not be included in any certificate counts. However, if a certificate holder submits a completely new application, and receives an additional certificate, this will be counted alongside all other issued certificates.
 
@@ -341,20 +332,15 @@ The distribution of live births by age of mother was sourced from [ONS nomis too
 
 The distribution of live births by IMD decile was sourced from [birth characteristics dataset published by ONS (see worksheet 12)](https://www.ons.gov.uk/file?uri=/peoplepopulationandcommunity/birthsdeathsandmarriages/livebirths/datasets/birthcharacteristicsinenglandandwales/2021/birthcharacteristics2021workbooknew.xlsx).
 
-## 3. Changes to this publication
-This is the first time this publication has been released.
+## 3. Strengths and limitations
 
-## 4. Strengths and limitations
-
-### 4.1. Strengths {.toc-ignore}
+### 3.1. Strengths {.toc-ignore}
 
 The main strength of these statistics is the completeness of the dataset and accuracy of information captured during processing activities carried out by the NHSBSA. This dataset covers all applications, and subsequent outcomes, for support with health costs via certificate schemes administered by NHSBSA.
 
 All the data has come from the same administrative source. Using one source of data ensures that the data is complete and all data required for this publication is present.
 
-The data used in this publication is extracted from the same source as all of our [Official Statistics statistical collections](https://www.nhsbsa.nhs.uk/statistical-collections). This allows comparability across other publications. Our [Official Statistics guidance table (ODT: 69KB)](https://www.nhsbsa.nhs.uk/sites/default/files/2022-10/Official_Statistics_guidance_table_v004.odt) shows the comparability criteria between our publications.
-
-### 4.2. Limitations {.toc-ignore}
+### 3.2. Limitations {.toc-ignore}
 
 These statistics are reliant on the quality of data supplied and processed during the application process. 
 
@@ -364,17 +350,17 @@ Due to the lack of a consistent, reliable unique person identifier, figures cann
 
 In addition to the lack of a consistent unique person identifier, information governance restrictions prevent the linking of data across different services and therefore it is not possible to provide any data relating to the number of individuals receiving support across all NHS Help with Health Costs services. It is also possible that an individual could hold multiple certificates from different services at the same point in time.
 
-## 5. Revisions
+## 4. Revisions
 
 Any revisions that we make to these statistics will be made in line with our [Revisions and Corrections policy](https://www.nhsbsa.nhs.uk/policies-and-procedures). Any significant errors that are identified within these statistics after their publication that would result in the contradiction of conclusions previously drawn from the data will be notified of prominently on our website and any other platforms that host these statistics, corrected as soon as possible, and communicated clearly to users and stakeholders.
 
-## 6. Related statistics, comparability and useful resources
+## 5. Related statistics, comparability and useful resources
 
-### 6.1 Code of Practice for Statistics {.toc-ignore}
+### 5.1 Code of Practice for Statistics {.toc-ignore}
 
 These statistics have been produced in compliance of the Code of Practice for Statistics. You can find more on the code of practice and its pillars, principles and practices from the [UK Statistics Authority website](https://code.statisticsauthority.gov.uk/).
 
-## 7. Quality of the statistics
+## 6. Quality of the statistics
 
 We aim to provide users of this publication with an evidence-based assessment of its quality and the quality of the data from which it is produced. We do so to demonstrate our commitment to comply with the UK Statistics Authority’s (UKSA) Code of Practice for Statistics, particularly the pillar of Quality and its principles.
 
@@ -392,22 +378,20 @@ This is an assessment of the quality of these statistics against the European st
 *	Accessibility
 *	Coherence and comparability
 
-These principles guide us and are complimented by the UKSA’s regulatory standard for the Quality Assurance of Administrative Data (QAAD). You can view our QAAD assessment of prescription data on [our website](https://www.nhsbsa.nhs.uk/statistical-collections).
-
-### 7.1. Relevance {.toc-ignore}
+### 6.1. Relevance {.toc-ignore}
 
 ***This dimension covers the degree to which the product meets user need in both coverage and content***
   
-The HWHC publication summarises the number of certificates issued by NHSBSA to provide support to individuals with their health costs. We believe that this can be used to inform policy decisions at a national and local level, by the public to scrutinise prescribing habits, and by academia and applied health researchers for matters relating to public health. The NHSBSA also routinely receives Freedom of Information requests and parliamentary questions about this subject matter. 
+The HwHC publication summarises the number of certificates issued by NHSBSA to provide support to individuals with their health costs. We believe that this can be used to inform policy decisions at a national and local level, by the public to scrutinise uptake of NHS Help with Health Costs services, and by academia and applied health researchers for matters relating to public health. The NHSBSA also routinely receives Freedom of Information requests and parliamentary questions about this subject matter. 
 
-We will be gathering feedback from users of these statistics on an on-going basis to help shape them and ensure that they remain relevant and of use.
+We will be gathering feedback from users of these statistics on an on-going basis to help shape them and ensure that they remain relevant and useful.
 
 
-### 7.2 Accuracy and Reliability {.toc-ignore}
+### 6.2 Accuracy and Reliability {.toc-ignore}
 
 ***This dimension covers the statistics proximity between an estimate and the unknown true value***
   
-#### 7.2.1. Accuracy  {.toc-ignore}
+#### 6.2.1. Accuracy  {.toc-ignore}
   
 These statistics are derived from data collected during processing activities carried out by the NHSBSA to issue certificates to provide help with health costs. 
 
@@ -416,49 +400,53 @@ The figures used are collected as an essential part of the process of supply cer
 As there is a manual data entry element to the services covered by this publication, inevitably some small errors may occur in the data. The NHSBSA take measures to minimise these error including monthly quality checks based on a random sample of certificates issued. 
 
 As of May 2024 the 12 month rolling accuracy results for NHS Help with Health Costs service areas were:
+```{r HwHC Accuracy}
+data.frame(
+  'HwHC Service' = c("Maternity exemption", "Medical exemption", "NHS Low Income Scheme", "PPC", "HRT PPC"),
+  '12 month rolling accurary (%)' = c("98.4","98.5","98.3","98.2","96.3"),
+  check.names=FALSE
+) |> 
+  knitr::kable(
+    align = "lr"
+  )
+```
 
-* NHS Low Income Scheme : 98.3%
-*	Maternity exemption : 98.4%
-*	Medical exemption : 98.5%
-* PPC : 98.2%
-* HRT PPC : 96.3%
-
-#### 7.2.2. Reliability {.toc-ignore}
+#### 6.2.2. Reliability {.toc-ignore}
 
 Data can be collected and updated throughout the full lifecycle, from initial application to certificate expiration. These statistics are derived from the latest available information at the time the report was developed.
 
 
-### 7.3. Timeliness and punctuality {.toc-ignore}
+### 6.3. Timeliness and punctuality {.toc-ignore}
 
 ***Timeliness refers to the time gap between publication and the reference period. Punctuality refers to the gap between planned and actual publication dates***
   
 The publication date is determined by the availability of the data, dependent on the completion of processing activities.
 
-A decision was made to allow a window of a couple of months following the end of the financial year to accommodate applications submitted by third parties (e.g. pharmacy PPC sales) and to allow consideration of certificates which may be back-dated to provide coverage prior to the date of application.
+A decision was made to allow a window of a couple of months following the end of the financial year to accommodate applications submitted by third parties, for example, pharmacy PPC sales.
 
 
-### 7.4. Accessibility and clarity {.toc-ignore}
+### 6.4. Accessibility and clarity {.toc-ignore}
 
 ***Accessibility is the ease with which users can access the data, also reflecting the format in which the data are available and the availability of supporting information. Clarity refers to the quality and sufficiency of the metadata, illustrations, and accompanying advice***
   
 The statistical summary narrative for this publication is presented as an HTML webpage, with supporting documentation also released in HTML format. Summary data and additional analysis is presented in tables in Excel files.
 
-The R code used to produce the newest release of the HWHC publication is also available from the [NHSBSA GitHub](https://github.com/nhsbsa-data-analytics).
+A supporting online dashboard has also been created to allow some interrogation of the available data.
+
+The R code used to produce the newest release of the HwHC publication is also available from the [NHSBSA GitHub](https://github.com/nhsbsa-data-analytics).
 
 ***Clarity***
   
 A glossary of terms is included in this document.
 
 
-### 7.5. Coherence and comparability {.toc-ignore}
+### 6.5. Coherence and comparability {.toc-ignore}
 
 ***Coherence is the degree to which data have been derived from different sources or methods but refer to the same topic or similar. Comparability is the degree to which data can be compared over time and domain***
   
-The HWHC publication is the only statistics available on the certificates issued by NHSBSA to provide support with health costs. The statistics are all derived from the same administrative data source with the same methodology applied to all data points.
+The HwHC publication is the only statistics available on the certificates issued by NHSBSA to provide support with health costs. The statistics are all derived from the same administrative data source with the same methodology applied to all data points.
 
-Comparability with other publications produced by the NHSBSA can be determined using the [Official Statistics guidance table](https://www.nhsbsa.nhs.uk/statistical-collections), which is maintained with the release of each new publication. This table shows how all of NHSBSA’s publications compare across a range of measures to help users identify the best publication for their needs or understand where differences in figures may occur.
-
-#### 7.5.1. Comparisons over time {.toc-ignore}
+#### 6.5.1. Comparisons over time {.toc-ignore}
 
 In order to allow for comparisons to be made over time these statistics cover the whole period for which data is available, from financial year 2018/19 onwards.
 
@@ -472,12 +460,12 @@ The main trade-off in this publication is the balance between timeliness and dat
 ***Assessment of user needs and perceptions
 This dimension covers the processes for finding out about users and uses and their views on the statistical products***
 
-Alongside the release of these statistics the NHSBSA will also be releasing a continuous feedback survey, allowing users to quickly tell us their thoughts on the content and utility of these statistics. This feedback, along with feedback gathered from other routes such as direct contact, will be used to shape the content and style of future HWHC publications and other statistical products from the NHSBSA.
+Alongside the release of these statistics the NHSBSA will also be releasing a continuous feedback survey, allowing users to quickly tell us their thoughts on the content and utility of these statistics. This feedback, along with feedback gathered from other routes such as direct contact, will be used to shape the content and style of future HwHC publications and other statistical products from the NHSBSA.
 
 ***Performance, cost and respondent burden
 This dimension describes the effectiveness, efficiency and economy of the statistical output***
 
-There is no respondent burden for HWHC data, as all data are extracted from existing NHSBSA information and transactional systems. 
+There is no respondent burden for HwHC data, as all data are extracted from existing NHSBSA information and transactional systems. 
 This initial release has been developed with a reproducible analytical pipeline (RAP) in mind and RAP principles applied where possible. This development has been done in R and the code used will be made publicly available at the [NHSBSA GitHub](https://github.com/nhsbsa-data-analytics) in due course. Further development is planned to the RAP used for this publication to automate as many tasks as possible. 
 
 ***Confidentiality, transparency and security
@@ -489,15 +477,7 @@ The NHSBSA has robust confidentiality and security policies that were adhered to
 
 A risk assessment around potential disclosure of personal identifiable information through these statistics was carried out during their production. In line with the NHSBSA’s Statistical Disclosure Control Policy, information where a count of individuals less than five can be inferred, has been redacted.
 
-***Quality assurance of administrative data***
-
-In addition to the assessment, we have followed the Quality Assurance of Administrative Data (QAAD) toolkit, as described by the Office for Statistics Regulation (OSR). Using the toolkit, we established the level of assurance we are seeking (or “benchmark”) for each source. The assurance levels are set as basic, enhanced, or comprehensive depending on the risk of quality concerns for that source, based on various factors.
-
-We have made a judgement about the suitability of the administrative data for use in producing this publication, this is designed to be pragmatic and proportionate. [The QAAD assessment for prescription data can be found on the NHSBSA website](https://www.nhsbsa.nhs.uk/statistical-collections).
-
-
-
-## 8. Glossary of terms used in these statistics
+## 7. Glossary of terms used in these statistics
 
 **Age**
 
@@ -529,7 +509,7 @@ The number of issued certifications includes all cases where a certificate was i
 
 Some individuals may receive multiple certificates, with each certificate being counted as an distinct event.
 
-## 9. Feedback and contact us
+## 8. Feedback and contact us
 
 Feedback is important to us; we welcome any questions and comments relating to these statistics. 
 
